# cube_puzzle

./: .gitignore  .gitlab-ci.yml  CHANGE.md  CHANGELOG.md  CMAKE_configure.cmake  CMAKE_configure_package.cmake  CMAKE_configure_win.cmake  CMAKE_copy_dev_dll.cmake  CMAKE_info_variables.cmake  CMAKE_library.cmake  CMAKE_package.cmake  CMakeLists.txt  CONTRIBUTORS  Dockerfile.ci  INSTALL.md  Klassendiagramm.drawio  LICENSE  README.md  TODO.md  Uebergangsfunktionen von Seite zu Seite.txt  Vorueberlegungen Spielmechanismen.txt  classdiagram.drawio  classdiagram_test.drawio  genXcode.sh  konzept.md  makefile  run.sh
asset/graphic/: music_touch.xcf
asset/lang/selector/: en.lang
asset/levels/: 2.txt  3.level  Level1.level  Level2.level  LevelFuerEhrgeizige.level  Level_1.level  Level_10.level  Level_12.level  Level_13.level  Level_2.level  Level_3.level  Level_4.level  Level_5.level  Level_6.level  any_level.level  demoSHEEB.level  demoSHEEB.tut  fall.level  fall.tut  flag.level  flag.tut  flag2.level  level_17.level  level_7.level  level_8.level  level_9.level  objectBlockerTest.level  out.level  out1.level  out2.level  pull.tut  slider.level  slider.tut  stress.level  title.screen
asset/levels/de/: Level_12.level  Level_13.level  Level_2.level  Level_4.level  Level_5.level  Level_6.level  level_17.level  pull.tut  slider.tut  title.screen
online_presence/: Code_Struktur.drawio  LargeIcon.xcf  info.json  privacy.md
online_presence/appstore/: deviceList.md
remoteLevels/: levelList.txt  test.level
src/: AudioHandler.cpp  AudioHandler.hpp  CubeGame.cpp  CubeGame.hpp  GameObject.cpp  GameObject.hpp  Level.cpp  Level.hpp  LevelSelector.cpp  LevelSelector.hpp  TouchController.cpp  TouchController.hpp  audioHandler.cpp  config.hpp.in  examplegame.cpp  examplegame.hpp  filehelper.hpp  gamebase.cpp  gamebase.hpp  global.hpp  main.cpp  mathhelper.hpp  matrix.hpp  recthelper.hpp  stringhelper.hpp  touchhelper.cpp  touchhelper.hpp
src/GameObjects/: CubeField.cpp  CubeField.hpp  CubeMap.cpp  CubeMap.hpp  CubeMapMiniMap.cpp  CubeMapMiniMap.hpp  CubeMapSide.cpp  CubeMapSide.hpp  CubeMap_CubeMapSide.cpp  CubeMap_playerMovement.cpp  CubeObject.cpp  CubeObject.hpp  CubeObject_render.cpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp  Text.cpp  Text.hpp  TouchObject.cpp  TouchObject.hpp  UIButton.cpp  UIButton.hpp  WorldMap.cpp  WorldMap.hpp
src/States/: ComplexGameState.cpp  ComplexGameState.hpp  LanguageSelector.cpp  LanguageSelector.hpp  Level.cpp  Level.hpp  LevelSelector.cpp  LevelSelector.hpp  TitleScreen.cpp  TitleScreen.hpp  TutorialLevel.cpp  TutorialLevel.hpp
src/data/: Colors.hpp  CubeData.cpp  CubeData.hpp  DiceData.cpp  DiceData.hpp  EmptyData.hpp  LevelData.hpp  LevelLoader.cpp  LevelLoader.hpp  MoveDirections.hpp  RemoteLevelFetch.cpp  RemoteLevelFetch.hpp  SpriteStorage.hpp  WorldField.cpp  WorldField.hpp  bezier.hpp  language.cpp  language.hpp  paths.hpp  spriteDefs.hpp
src/examplegame/: examplegame.cpp  examplegame.hpp
src/lib/: HTTPRequest.hpp
xcode_multi/: .gitignore  SETUP.md  SimulatorsList.txt  appInfo  config.xcconfig  configureConfigHeader.sh  download_dependencies.sh  extractXCodeData.sh  multipleSimulatorStartup.sh  osname.sh
xcode_multi/Assets.xcassets/AppIcon.appiconset/: Contents.json
xcode_multi/Assets.xcassets/asset/audio/background.dataset/: Contents.json
xcode_multi/Assets.xcassets/asset/audio/finish.dataset/: Contents.json
xcode_multi/Assets.xcassets/asset/audio/hit2.dataset/: Contents.json
xcode_multi/Assets.xcassets/asset/audio/pressed.dataset/: Contents.json
xcode_multi/Assets.xcassets/asset/font/RobotoSlab-Bold.dataset/: Contents.json
xcode_multi/cube_puzzle.xcodeproj/: project.pbxproj
xcode_multi/cube_puzzle.xcodeproj/xcshareddata/xcschemes/: cube_puzzle iOS.xcscheme
xcode_multi/cube_puzzleUITests/: cube_puzzleTests.swift  cube_puzzleUITests.swift  cube_puzzleUITestsLaunchTests.swift
xcode_multi/iOS/: LaunchScreen.storyboard
xcode_multi/macOS/Base.lproj/: Main.storyboard
xcode_multi/prepared/: config.hpp
xcode_multi/testtest/: testtest.swift  testtestLaunchTests.swift
(+63 files in other folders)
